<resources>
    <string name="app_name">Music Player</string>
    <string name="template">Template Text</string>
    <string name="song_img">Song Image</string>
    <string name="music">Music</string>
    <string name="checkbox">Checkbox</string>
    <string name="tick">Tick</string>
    <string name="cross">Cross</string>
    <string name="stop">Stop</string>
    <string name="plus">Plus</string>
    <string name="shuffle">Shuffle</string>
    <string name="queued">Queued</string>
    <string name="playlists">Playlists</string>
    <string name="tick_cross_plus">Tick Cross Plus</string>
    <string name="cancel">Cancel</string>
    <string name="purge">Purge</string>
    <string name="media_route_menu_title">Chromecast</string>
    <string name="save">Save</string>
    <string name="append_shuffled">Append Shuffled</string>
    <string name="set_shuffled">Set Shuffled</string>
    <string name="set">Set</string>
    <string name="append">Append</string>
    <string name="delete">Delete</string>
</resources>
